--- a/311cleaner.ipynb
+++ b/311cleaner.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This program will read a csv file of 311 data to a dataframe.\n",
+    "The dataframe will be cleaned as such: Remove all data other than the year 2017\n",
+    "\n",
+    "The results will be stored to a new csv file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
