--- a/311_CombinedMaster.ipynb
+++ b/311_CombinedMaster.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "# df311 = pd.read_csv('311cleaned.csv')\n",
     "# df = pd.merge(df311, dfwx,  left_on='REQUEST_ID', right_on='REQUEST_ID', how='left')        \n",
-    "dfwx = pd.read_csv('311Master.csv')"
+    "df = pd.read_csv('311Master.csv')"
    ]
   },
   {
