--- a/311weatherGetter.ipynb
+++ b/311weatherGetter.ipynb
@@ -28,6 +28,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' Proecedure to clean data to year\n",
+    "df = pd.read_csv('76fda9d0-69be-4dd5-8108-0de7907fc5a4.csv')\n",
+    "df = df[df['CREATED_ON'].str.contains('2017-')]\n",
+    "df = df.sort_values(ascending=False, axis=0, by=['REQUEST_ID'])\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "df.describe()\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -1840,13 +1855,6 @@
    "source": [
     "dfwx.sample(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
