--- a/311_CombinedMaster.ipynb
+++ b/311_CombinedMaster.ipynb
@@ -753,7 +753,10 @@
    "source": [
     "# remove all call types with less than 500 incidences\n",
     "s = df['REQUEST_TYPE'].value_counts()\n",
-    "df = df[df.isin(s.index[s >= 730]).values]\n"
+    "#s = df['REQUEST_TYPE']. != Referral || Question\n",
+    "\n",
+    "df = df[df.isin(s.index[s >= 730]).values]\n",
+    "\n"
    ]
   },
   {
