--- a/311_CombinedMaster.ipynb
+++ b/311_CombinedMaster.ipynb
@@ -2160,7 +2160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('311Trimmed.csv', 'w+') as fh:\n",
+    "with open('311Master.csv', 'w+') as fh:\n",
     "    df.to_csv(fh, index=False)"
    ]
   },
