--- a/311_Analysis.ipynb
+++ b/311_Analysis.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,39 +852,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Potholes                                8689\n",
+       "Weeds/Debris                            7873\n",
+       "Building Maintenance                    4037\n",
+       "Abandoned Vehicle (parked on street)    2572\n",
+       "Litter                                  1886\n",
+       "Refuse Violations                       1802\n",
+       "Illegal Parking                         1770\n",
+       "Missed Pick Up                          1717\n",
+       "Replace/Repair a Sign                   1539\n",
+       "City Source (CDBG)                      1499\n",
+       "Street Light - Repair                   1422\n",
+       "Building Without a Permit               1348\n",
+       "Vacant Building                         1256\n",
+       "Paving Request                          1236\n",
+       "Overgrowth                              1209\n",
+       "Snow/Ice removal                        1033\n",
+       "Pruning (city tree)                     1020\n",
+       "Rodent control                           965\n",
+       "Need Potable Water                       845\n",
+       "Fire Safety System Not Working           818\n",
+       "Dead Animal                              787\n",
+       "Request New Sign                         783\n",
+       "Illegal Dumping                          756\n",
+       "Leak                                     736\n",
+       "Catch Basin, Clogged                     731\n",
+       "Traffic                                  726\n",
+       "Name: REQUEST_TYPE, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['REQUEST_TYPE'].value_counts(sort=True, ascending=False, dropna=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Potholes                                8787\n",
-       "Weeds/Debris                            7933\n",
-       "Building Maintenance                    4037\n",
-       "Abandoned Vehicle (parked on street)    2572\n",
-       "Litter                                  1916\n",
-       "Refuse Violations                       1802\n",
-       "Illegal Parking                         1770\n",
-       "Missed Pick Up                          1717\n",
-       "Replace/Repair a Sign                   1554\n",
-       "City Source (CDBG)                      1499\n",
-       "Street Light - Repair                   1458\n",
-       "Building Without a Permit               1348\n",
-       "Vacant Building                         1264\n",
-       "Paving Request                          1260\n",
-       "Overgrowth                              1211\n",
-       "Snow/Ice removal                        1050\n",
-       "Pruning (city tree)                     1032\n",
-       "Rodent control                           965\n",
-       "Need Potable Water                       845\n",
-       "Fire Safety System Not Working           818\n",
-       "Dead Animal                              797\n",
-       "Request New Sign                         785\n",
-       "Illegal Dumping                          756\n",
-       "Leak                                     744\n",
-       "Traffic                                  739\n",
-       "Catch Basin, Clogged                     732\n",
-       "Name: REQUEST_TYPE, dtype: int64"
+       "Permits, Licenses and Inspections       15332\n",
+       "DPW - Street Maintenance                12596\n",
+       "DPW - Refuse                             3519\n",
+       "Police - AVU                             2572\n",
+       "Pittsburgh Water and Sewer Authority     2266\n",
+       "Police - Zones 1-6                       2089\n",
+       "Animal Care & Control                    1752\n",
+       "DOMI - TrafficShop                       1539\n",
+       "City Source Associates, Inc.             1499\n",
+       "Allegheny City Electric                  1422\n",
+       "DOMI - Asphalt                           1236\n",
+       "DOMI - Traffic                           1187\n",
+       "DPW - Forestry Division                  1020\n",
+       "DOMI - Permits                            756\n",
+       "DOMI - Streets                            146\n",
+       "DPW - Park Maintenance                     75\n",
+       "311                                        46\n",
+       "0                                           2\n",
+       "DPW - Transportation & Engineering          1\n",
+       "Name: DEPARTMENT, dtype: int64"
       ]
      },
      "execution_count": 5,
@@ -893,7 +932,88 @@
     }
    ],
    "source": [
-    "df['REQUEST_TYPE'].value_counts(sort=True, ascending=False, dropna=False) "
+    "df['DEPARTMENT'].value_counts(sort=True, ascending=False, dropna=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Brookline                    2211\n",
+       "Carrick                      2145\n",
+       "South Side Slopes            1799\n",
+       "Squirrel Hill South          1410\n",
+       "South Side Flats             1397\n",
+       "Mount Washington             1330\n",
+       "Beechview                    1236\n",
+       "Hazelwood                    1218\n",
+       "Bloomfield                   1178\n",
+       "Lincoln-Lemington-Belmar     1165\n",
+       "Knoxville                    1056\n",
+       "Central Lawrenceville        1049\n",
+       "Homewood North                998\n",
+       "Greenfield                    998\n",
+       "Garfield                      968\n",
+       "East Liberty                  959\n",
+       "Shadyside                     871\n",
+       "Marshall-Shadeland            866\n",
+       "Homewood South                841\n",
+       "Sheraden                      830\n",
+       "Elliott                       816\n",
+       "Brighton Heights              811\n",
+       "Stanton Heights               764\n",
+       "Perry South                   722\n",
+       "Middle Hill                   721\n",
+       "Perry North                   709\n",
+       "Central Business District     695\n",
+       "Overbrook                     689\n",
+       "Highland Park                 665\n",
+       "Allentown                     653\n",
+       "                             ... \n",
+       "Spring Garden                 231\n",
+       "Mt. Oliver                    195\n",
+       "Swisshelm Park                187\n",
+       "Friendship                    186\n",
+       "Windgap                       176\n",
+       "Bedford Dwellings             174\n",
+       "Summer Hill                   164\n",
+       "Terrace Village               163\n",
+       "Bon Air                       160\n",
+       "Allegheny Center              143\n",
+       "West End                      133\n",
+       "Esplen                        128\n",
+       "Regent Square                 113\n",
+       "North Shore                   100\n",
+       "Hays                           96\n",
+       "0                              94\n",
+       "Fairywood                      93\n",
+       "New Homestead                  92\n",
+       "Chateau                        82\n",
+       "Chartiers City                 80\n",
+       "Allegheny West                 79\n",
+       "Oakwood                        79\n",
+       "South Shore                    76\n",
+       "Ridgemont                      73\n",
+       "St. Clair                      67\n",
+       "Northview Heights              56\n",
+       "East Carnegie                  45\n",
+       "Glen Hazel                     32\n",
+       "Arlington Heights              14\n",
+       "Mount Oliver Borough            4\n",
+       "Name: NEIGHBORHOOD, Length: 92, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['NEIGHBORHOOD'].value_counts(sort=True, ascending=False, dropna=False) "
    ]
   },
   {
