--- a/311_Analysis.ipynb
+++ b/311_Analysis.ipynb
@@ -1832,54 +1832,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The coefficient for current.apparentTemperature is 0.0008093613863588357\n",
-      "The coefficient for current.cloudCover is -0.0037119627895202474\n",
-      "The coefficient for current.dewPoint is 1.3409912479605674e-05\n",
-      "The coefficient for current.humidity is -0.0021480800344471454\n",
-      "The coefficient for current.icon is 0.02403535125486922\n",
-      "The coefficient for current.precipIntensity is 0.0012802547149778313\n",
-      "The coefficient for current.precipProbability is -0.011554449934477594\n",
-      "The coefficient for current.precipType is 0.025345539228364418\n",
-      "The coefficient for current.pressure is -0.00018096995981898594\n",
-      "The coefficient for current.summary is -0.010728954833986162\n",
-      "The coefficient for current.temperature is -0.0010486497248902876\n",
-      "The coefficient for current.uvIndex is 0.009329663145923494\n",
-      "The coefficient for current.visibility is 0.0001577448749850137\n",
-      "The coefficient for current.windBearing is -4.233677063335327e-05\n",
-      "The coefficient for current.windGust is 7.105487522226451e-05\n",
-      "The coefficient for current.windSpeed is 0.0009395750610564881\n",
-      "The coefficient for daily.apparentTemperatureHigh is 0.0013892944134645262\n",
-      "The coefficient for daily.apparentTemperatureLow is 0.0019074720729788167\n",
-      "The coefficient for daily.apparentTemperatureMax is -0.0007442264816080501\n",
-      "The coefficient for daily.apparentTemperatureMin is -0.00400191062739003\n",
-      "The coefficient for daily.cloudCover is -0.0034682516175310813\n",
-      "The coefficient for daily.dewPoint is 0.003176535276032792\n",
-      "The coefficient for daily.humidity is -0.0661964776021008\n",
-      "The coefficient for daily.icon is -0.05422648899691992\n",
-      "The coefficient for daily.moonPhase is 0.001085054998913109\n",
-      "The coefficient for daily.precipAccumulation is -0.004671375214388841\n",
-      "The coefficient for daily.precipIntensity is -0.0019739022211464653\n",
-      "The coefficient for daily.precipIntensityMax is -0.00016119837886394576\n",
-      "The coefficient for daily.precipProbability is 0.0030214432443727147\n",
-      "The coefficient for daily.precipType is 0.022543721307223163\n",
-      "The coefficient for daily.pressure is 0.00035589292527594274\n",
-      "The coefficient for daily.summary is 0.001138047466322788\n",
-      "The coefficient for daily.temperatureHigh is -0.0016582181906134386\n",
-      "The coefficient for daily.temperatureLow is -0.0018596296358480183\n",
-      "The coefficient for daily.temperatureMax is -0.0003341407433441283\n",
-      "The coefficient for daily.temperatureMin is 0.0035458398762308733\n",
-      "The coefficient for daily.uvIndex is 0.08762892423941242\n",
-      "The coefficient for daily.visibility is -0.00029402104311600534\n",
-      "The coefficient for daily.windBearing is 0.000885599979100392\n",
-      "The coefficient for daily.windGust is 0.00039860872177787976\n",
-      "The coefficient for daily.windSpeed is -0.004015100436733297\n"
+      "The coefficient for current.apparentTemperature is 0.0004270877075908872\n",
+      "The coefficient for current.cloudCover is -0.003694375678669202\n",
+      "The coefficient for current.dewPoint is -0.0005207389492416601\n",
+      "The coefficient for current.humidity is 0.02532543387552259\n",
+      "The coefficient for current.icon is 0.03709762686538905\n",
+      "The coefficient for current.precipIntensity is 0.0014532689697739371\n",
+      "The coefficient for current.precipProbability is -0.012600075931511216\n",
+      "The coefficient for current.precipType is 0.009363301770172569\n",
+      "The coefficient for current.pressure is 1.97973515768025e-05\n",
+      "The coefficient for current.summary is -0.018560998114642707\n",
+      "The coefficient for current.temperature is -9.484823987234928e-05\n",
+      "The coefficient for current.uvIndex is 0.008543484876407742\n",
+      "The coefficient for current.visibility is 0.000511051756568971\n",
+      "The coefficient for current.windBearing is -2.11935377054259e-05\n",
+      "The coefficient for current.windGust is -1.9952986279869432e-05\n",
+      "The coefficient for current.windSpeed is 0.0011866835602070787\n",
+      "The coefficient for daily.apparentTemperatureHigh is 0.001037434525300354\n",
+      "The coefficient for daily.apparentTemperatureLow is 0.0017097118046821246\n",
+      "The coefficient for daily.apparentTemperatureMax is -0.0005336361137676147\n",
+      "The coefficient for daily.apparentTemperatureMin is -0.003916381334435384\n",
+      "The coefficient for daily.cloudCover is -0.0007028804906680647\n",
+      "The coefficient for daily.dewPoint is 0.002756916587063215\n",
+      "The coefficient for daily.humidity is -0.05209474823988581\n",
+      "The coefficient for daily.icon is -0.0316182133968844\n",
+      "The coefficient for daily.moonPhase is -0.00023089759098570255\n",
+      "The coefficient for daily.precipAccumulation is -0.0049919073039914955\n",
+      "The coefficient for daily.precipIntensity is -0.002697575783182908\n",
+      "The coefficient for daily.precipIntensityMax is -0.00016643920823849887\n",
+      "The coefficient for daily.precipProbability is 0.0021275105798106405\n",
+      "The coefficient for daily.precipType is 0.05391142065598607\n",
+      "The coefficient for daily.pressure is 0.00021234337265024037\n",
+      "The coefficient for daily.summary is 0.0001845551662400172\n",
+      "The coefficient for daily.temperatureHigh is -0.0014147800190639828\n",
+      "The coefficient for daily.temperatureLow is -0.0017672647989472145\n",
+      "The coefficient for daily.temperatureMax is -0.00023687013005846283\n",
+      "The coefficient for daily.temperatureMin is 0.003591661172341909\n",
+      "The coefficient for daily.uvIndex is 0.09094269166603293\n",
+      "The coefficient for daily.visibility is 0.0002764905274683419\n",
+      "The coefficient for daily.windBearing is 0.0005324272044163177\n",
+      "The coefficient for daily.windGust is 0.0006092897273039379\n",
+      "The coefficient for daily.windSpeed is -0.004792908453687203\n"
      ]
     }
    ],
@@ -1894,31 +1894,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The coefficient for current.cloudCover is -0.0037119627895202474\n",
-      "The coefficient for current.humidity is -0.0021480800344471454\n",
-      "The coefficient for current.icon is 0.02403535125486922\n",
-      "The coefficient for current.precipProbability is -0.011554449934477594\n",
-      "The coefficient for current.precipType is 0.025345539228364418\n",
-      "The coefficient for current.summary is -0.010728954833986162\n",
-      "The coefficient for current.uvIndex is 0.009329663145923494\n",
-      "The coefficient for daily.apparentTemperatureMin is -0.00400191062739003\n",
-      "The coefficient for daily.cloudCover is -0.0034682516175310813\n",
-      "The coefficient for daily.dewPoint is 0.003176535276032792\n",
-      "The coefficient for daily.humidity is -0.0661964776021008\n",
-      "The coefficient for daily.icon is -0.05422648899691992\n",
-      "The coefficient for daily.precipAccumulation is -0.004671375214388841\n",
-      "The coefficient for daily.precipProbability is 0.0030214432443727147\n",
-      "The coefficient for daily.precipType is 0.022543721307223163\n",
-      "The coefficient for daily.temperatureMin is 0.0035458398762308733\n",
-      "The coefficient for daily.uvIndex is 0.08762892423941242\n",
-      "The coefficient for daily.windSpeed is -0.004015100436733297\n"
+      "The coefficient for current.cloudCover is -0.003694375678669202\n",
+      "The coefficient for current.humidity is 0.02532543387552259\n",
+      "The coefficient for current.icon is 0.03709762686538905\n",
+      "The coefficient for current.precipProbability is -0.012600075931511216\n",
+      "The coefficient for current.precipType is 0.009363301770172569\n",
+      "The coefficient for current.summary is -0.018560998114642707\n",
+      "The coefficient for current.uvIndex is 0.008543484876407742\n",
+      "The coefficient for daily.apparentTemperatureMin is -0.003916381334435384\n",
+      "The coefficient for daily.dewPoint is 0.002756916587063215\n",
+      "The coefficient for daily.humidity is -0.05209474823988581\n",
+      "The coefficient for daily.icon is -0.0316182133968844\n",
+      "The coefficient for daily.precipAccumulation is -0.0049919073039914955\n",
+      "The coefficient for daily.precipIntensity is -0.002697575783182908\n",
+      "The coefficient for daily.precipProbability is 0.0021275105798106405\n",
+      "The coefficient for daily.precipType is 0.05391142065598607\n",
+      "The coefficient for daily.temperatureMin is 0.003591661172341909\n",
+      "The coefficient for daily.uvIndex is 0.09094269166603293\n",
+      "The coefficient for daily.windSpeed is -0.004792908453687203\n"
      ]
     }
    ],
