--- a/311_Analysis.ipynb
+++ b/311_Analysis.ipynb
@@ -1074,10 +1074,7 @@
     "df_weeds = df[df['REQUEST_TYPE'] == 'Weeds/Debris']\n",
     "df_abandoned = df[df['REQUEST_TYPE'] == 'Abandoned Vehicle (parked on street)']\n",
     "df_litter = df[df['REQUEST_TYPE'] == 'Litter']\n",
-    "df_paving = df[df['REQUEST_TYPE'] == 'Paving Request']\n",
-    "\n",
-    "\n",
-    "\n"
+    "df_paving = df[df['REQUEST_TYPE'] == 'Paving Request']\n"
    ]
   },
   {
@@ -1938,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1945,7 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1961,16 +1958,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.006733526609910446, 65.86204639886435, 8.115543506066883)"
+       "(0.006501944836665663, 66.86610226515867, 8.177169575419033)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1983,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2055,7 +2052,7 @@
        "GaussianNB(priors=None, var_smoothing=1e-09)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2068,16 +2065,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([13, 12, 13, ..., 13,  4, 25], dtype=int64)"
+       "array([15, 21, 13, ...,  4,  4, 24], dtype=int64)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,16 +2086,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.12197590849276242"
+       "0.12465599836917746"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2164,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2172,7 @@
        "          weights='uniform')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2188,16 +2185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0792590343152141"
+       "0.07889104066863724"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2209,17 +2206,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sensitivity: 0.9655172413793104\n",
-      "specificity: 0.75\n",
-      "false positive rate: 0.25\n",
-      "precision: 0.9655172413793104\n"
+      "sensitivity: 0.975609756097561\n",
+      "specificity: 1.0\n",
+      "false positive rate: 0.0\n",
+      "precision: 1.0\n"
      ]
     }
    ],
