Added csv and classifier for grouped request types

--- a/(Bob)311_Analysis.ipynb
+++ b/(Bob)311_Analysis.ipynb
@@ -3921,10 +3921,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_new.to_csv('311TrimmedGrouped.csv')"
+   ]
   },
   {
    "cell_type": "code",
